fix overflow-x bug

--- a/_scss/pages/home.scss
+++ b/_scss/pages/home.scss
@@ -186,10 +186,10 @@
 #future {
     position: relative;
     text-align: center;
-    width: 100%;
-    text-align: center;
+    // width: 100%;
     // overflow: hidden;
     // font-size: 2.5vw;
+    overflow-x:hidden;
 }
 #future_inner {
     transform: scale(1.0);
@@ -199,7 +199,7 @@
 
 #future_description {
     position: absolute;
-    width: 95%;
+    width: 85%;
     max-width: 1100px;
     left: 50%;
     top: 3%;
